jobs/job_60783810/uncert/errors/benchmark_607/solver_2.txt
INFO: Pointer analysis took 0 sec 12 ms
input.cc:327:34: error: use of undeclared identifier 'node1_index'
void (*nodes[6])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                 ^
input.cc:327:52: error: use of undeclared identifier 'node2_index'
void (*nodes[6])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                   ^
input.cc:327:70: error: use of undeclared identifier 'node3_index'
void (*nodes[6])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                                     ^
input.cc:327:88: error: use of undeclared identifier 'node4_index'
void (*nodes[6])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                                                       ^
input.cc:328:9: error: use of undeclared identifier 'node5_index'
        node5_index,      node6_index};
        ^
input.cc:328:27: error: use of undeclared identifier 'node6_index'
        node5_index,      node6_index};
                          ^
6 errors generated.
Rd1nK_Ptr2Arr.c:327:34: error: use of undeclared identifier 'node1_index'
void (*nodes[6])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                 ^
Rd1nK_Ptr2Arr.c:327:52: error: use of undeclared identifier 'node2_index'
void (*nodes[6])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                   ^
Rd1nK_Ptr2Arr.c:327:70: error: use of undeclared identifier 'node3_index'
void (*nodes[6])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                                     ^
Rd1nK_Ptr2Arr.c:327:88: error: use of undeclared identifier 'node4_index'
void (*nodes[6])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                                                       ^
Rd1nK_Ptr2Arr.c:328:9: error: use of undeclared identifier 'node5_index'
        node5_index,      node6_index};
        ^
Rd1nK_Ptr2Arr.c:328:27: error: use of undeclared identifier 'node6_index'
        node5_index,      node6_index};
                          ^
Rd1nK_Ptr2Arr.c:621:5: warning: unused label 'ERROR' [-Wunused-label]
    ERROR: __VERIFIER_error();
    ^~~~~~~
1 warning and 6 errors generated.
